# argus-polymarket

./: Cargo.toml  README.md  changelog.txt  versionx.json
src/: data_and_encoders.rs  lib.rs  socket.rs
