[package]
name = "argus-polymarket"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = "1.0"
base64 = "0.22"
serde_json = "1.0"
crossbeam = "0.8.4"
fast-float = "0.2.0"
event-listener = "5.4.1"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
